<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="EtapeEnCours" Id="{72cf8a31-bffd-4f0c-9dc6-ce14aa078678}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION EtapeEnCours : STRING(50)
VAR_INPUT
END_VAR
VAR
	icounter:INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR icounter := G_Match.iLigne TO 1 BY -1 DO
	IF G_Match.Tableau[G_Match.iCounter].NomEtape <> '' THEN
		EtapeEnCours := G_Match.Tableau[G_Match.iCounter].NomEtape;
		EXIT;
	END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="EtapeEnCours">
      <LineId Id="8" Count="4" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>