<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PointsRestants" Id="{db49c57e-c620-40a7-8664-89c78c0b44a4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION PointsRestants : INT
VAR_INPUT
END_VAR
VAR
	icounter:INT;
	points:INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//calcul le nombre de points restant jusqu'à la prochaine étape nommée
FOR icounter := G_Match.iLigne TO 100 BY 1 DO
	points := points + G_Match.Tableau[G_Match.iCounter].uiAjoutPoints_pts;
	IF G_Match.Tableau[G_Match.iCounter].NomEtape <> '' THEN
		EXIT;
	END_IF
END_FOR
PointsRestants := points;]]></ST>
    </Implementation>
    <LineIds Name="PointsRestants">
      <LineId Id="18" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="12" Count="1" />
      <LineId Id="7" Count="0" />
      <LineId Id="17" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>